syntax = "proto3";
package greet;
option go_package = "greet/greetpb";
message Greeting{
  string first_name = 1;
  string last_name = 2;

}
message GreetRequest{
  Greeting greeting = 1;
}
message GreetResponse{
  string result = 1;
}

message GreetManyTimesRequest{

  Greeting greeting = 1;
}

message GreetManyTimesResponse
{
  string result = 1;
}
message GreetClientStreamExampleRequest{

  Greeting greeting = 1;

}
message GreetClientStreamExampleResponse{
  string result = 1;
}
message GreetBiDirectionalStreamingExampleRequest{

  Greeting greeting = 1;

}
message GreetBiDirectionalStreamingExampleResponse{
  string result = 1;
}

message GreetWithDeadlineRequest{
  string greeting = 1;
}
message GreetWithDeadlineResponse{
  string result = 1;
}

service GreetService{
  //Unary
  rpc Greet(GreetRequest) returns (GreetResponse){};

  rpc GreetManyTimes(GreetManyTimesRequest) returns(stream GreetManyTimesResponse){};
  rpc GreetClientStreamExample(stream GreetClientStreamExampleRequest) returns (GreetClientStreamExampleResponse){};
  rpc GreetBiDirectionalStreamingExample(stream GreetBiDirectionalStreamingExampleRequest) returns (stream GreetBiDirectionalStreamingExampleResponse){};

  rpc GreetWithDeadline(GreetWithDeadlineRequest) returns (GreetWithDeadlineResponse){};
}